remove API usage not available in Java 8